Fix z-index of header

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -171,6 +171,7 @@ body {
     top: 0;
     right: 0;
     left: 0;
+    z-index: 1;
 
     padding: 10px 8px 0 8px;
 
